force-app/main/default/objects/Offset_Project__c/Offset_Project__c.object-meta.xml
<CustomObject>
    <label>Offset Project</label>
    <nameField>
        <label>Offset Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offset Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>