force-app/main/default/objects/Offset_Project__c/fields/Baseline_GHG__c.field-meta.xml
<CustomField>
    <fullName>Baseline_GHG__c</fullName>
    <label>Baseline GHG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>