force-app/main/default/objects/Offset_Project__c/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <label>Basis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>