force-app/main/default/objects/Offset_Project__c/fields/Credits_Issued__c.field-meta.xml
<CustomField>
    <fullName>Credits_Issued__c</fullName>
    <label>Credits Issued</label>
    <summarizedField>Carbon_Credit__c.Quantity_Issued__c</summarizedField>
    <summaryForeignKey>Carbon_Credit__c.Offset_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>