force-app/main/default/objects/Offset_Project__c/fields/Credits_Retired__c.field-meta.xml
<CustomField>
    <fullName>Credits_Retired__c</fullName>
    <label>Credits Retired</label>
    <summarizedField>Carbon_Credit__c.Quantity_Retired__c</summarizedField>
    <summaryFilterItems>
        <field>Carbon_Credit__c.Status__c</field>
        <operation>equals</operation>
        <value>Retired</value>
    </summaryFilterItems>
    <summaryForeignKey>Carbon_Credit__c.Offset_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>