force-app/main/default/objects/Offset_Project__c/fields/Estimated_GHG_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Estimated_GHG_Reduction__c</fullName>
    <label>Estimated GHG Reduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>