force-app/main/default/objects/Offset_Project__c/fields/Methodology__c.field-meta.xml
<CustomField>
    <fullName>Methodology__c</fullName>
    <label>Methodology</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>