force-app/main/default/objects/Offset_Project__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <label>Project Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>