force-app/main/default/objects/Offset_Project__c/fields/Project_Developer__c.field-meta.xml
<CustomField>
    <fullName>Project_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Developer</label>
    <referenceTo>Project_Developer__c</referenceTo>
    <relationshipLabel>Offset Projects</relationshipLabel>
    <relationshipName>Offset_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>