force-app/main/default/objects/Offset_Project__c/fields/Project_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration_Months__c</fullName>
    <formula>IF (
	YEAR(Project_End_Date__c)=YEAR(Project_Start_Date__c), 
		MONTH(Project_End_Date__c)-MONTH(Project_Start_Date__c)+1
		,
		(
			((YEAR(Project_End_Date__c)-YEAR(Project_Start_Date__c)-1)*12)
			+ (13 - MONTH(Project_Start_Date__c)) 
			+ MONTH(Project_End_Date__c)
		)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Duration (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>