force-app/main/default/objects/Offset_Project__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <label>Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>