force-app/main/default/objects/Offset_Project__c/fields/Registry__c.field-meta.xml
<CustomField>
    <fullName>Registry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registry</label>
    <referenceTo>Carbon_Registry__c</referenceTo>
    <relationshipName>Offset_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>