force-app/main/default/objects/Offset_Project__c/fields/SDG_Goals__c.field-meta.xml
<CustomField>
    <fullName>SDG_Goals__c</fullName>
    <label>SDG Goals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - No Poverty</fullName>
            </value>
            <value>
                <fullName>2 - Zero Hunger</fullName>
            </value>
            <value>
                <fullName>3 - Good Health and Well-Being</fullName>
            </value>
            <value>
                <fullName>4 - Quality Education</fullName>
            </value>
            <value>
                <fullName>5 - Gender Equality</fullName>
            </value>
            <value>
                <fullName>6 - Clean Water and Sanitation</fullName>
            </value>
            <value>
                <fullName>7 - Affordable and Clean Energy</fullName>
            </value>
            <value>
                <fullName>8 - Decent Work and Economic Growth</fullName>
            </value>
            <value>
                <fullName>9 - Industry, Innovation, and Infrastructure</fullName>
            </value>
            <value>
                <fullName>10 - Reduced Inequalities</fullName>
            </value>
            <value>
                <fullName>11 - Sustainable Cities and Communities</fullName>
            </value>
            <value>
                <fullName>12 - Responsible Consumption and Production</fullName>
            </value>
            <value>
                <fullName>13 - Climate Action</fullName>
            </value>
            <value>
                <fullName>14 - Life Below Water</fullName>
            </value>
            <value>
                <fullName>15 - Life On Land</fullName>
            </value>
            <value>
                <fullName>16 - Peace, Justice, and Strong Institutions</fullName>
            </value>
            <value>
                <fullName>17 - Partnerships for the Goals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>