force-app/main/default/objects/Offset_Project__c/fields/Total_tCO2e__c.field-meta.xml
<CustomField>
    <fullName>Total_tCO2e__c</fullName>
    <formula>Credits_Retired__c +  Actual_GHG_Reduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total tCO2e</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>