force-app/main/default/objects/Offset_Project__c/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <description>Internal Carbon Projects</description>
    <label>Internal</label>
</RecordType>