force-app/main/default/objects/Offset_Project__c/recordTypes/VER.recordType-meta.xml
<RecordType>
    <fullName>VER</fullName>
    <active>true</active>
    <description>Voluntary Emission Reduction - External</description>
    <label>VER</label>
</RecordType>